--- a/designers/mari.html
+++ b/designers/mari.html
@@ -66,12 +66,12 @@
             </div>
 
             <div class="card">
-                <a href="../progetti/mari4.html"> <img src="../immagini/mari/mari4.jpg" alt=""> </a>
+                <a href="../progetti/mari4.html"> <img src="../immagini/mari/mari4.webp" alt=""> </a>
                 <p> <strong>16 animali</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
             </div>
 
             <div class="card">
-                <a href="../progetti/mari5.html"> <img src="../immagini/mari/mari5.jpeg" alt=""> </a>
+                <a href="../progetti/mari5.html"> <img src="../immagini/mari/mari5.webp" alt=""> </a>
                 <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
             </div>
 
