--- a/designers/nizzoli.html
+++ b/designers/nizzoli.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="card">
-                <a href="../progetti/nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.jpeg" alt=""> </a>
+                <a href="../progetti/nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.webp" alt=""> </a>
                 <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p>
             </div>
             
