--- a/progetti/nizzoli1.html
+++ b/progetti/nizzoli1.html
@@ -52,7 +52,7 @@
                 <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p> <!-- MODIFICARE -->
             </div>
             <div class="card">
-                <a href="nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.jpeg" alt=""> </a> <!-- MODIFICARE -->
+                <a href="nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.webp" alt=""> </a> <!-- MODIFICARE -->
                 <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p> <!-- MODIFICARE -->
             </div>
 
