--- a/progetti/nizzoli3.html
+++ b/progetti/nizzoli3.html
@@ -40,7 +40,7 @@
     
     
         <section class="progetto">
-            <img src="../immagini/nizzoli/nizzoli3.jpeg" alt=""> <!-- MODIFICARE -->
+            <img src="../immagini/nizzoli/nizzoli3.webp" alt=""> <!-- MODIFICARE -->
             <p>Marcello Nizzoli, 1930<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
