--- a/progetti/mari4.html
+++ b/progetti/mari4.html
@@ -38,7 +38,7 @@
     
     
         <section class="progetto">
-            <img src="../immagini/mari/mari4.jpg" alt="">
+            <img src="../immagini/mari/mari4.webp" alt="">
             <p>Enzo Mari, 1957<br>Prodotto</p>
         </section>
    
@@ -62,7 +62,7 @@
             </div>
 
             <div class="card">
-                <a href="mari5.html"> <img src="../immagini/mari/mari5.jpeg" alt=""> </a>
+                <a href="mari5.html"> <img src="../immagini/mari/mari5.webp" alt=""> </a>
                 <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
             </div>
 
