--- a/progetti/sambonet2.html
+++ b/progetti/sambonet2.html
@@ -38,7 +38,7 @@
     
     
         <section class="progetto">
-            <img src="../immagini/sambonet/sambonet2.jpeg" alt="">
+            <img src="../immagini/sambonet/sambonet2.webp" alt="">
             <p>Roberto Sambonet, 1972 <br>Prodotto</p>
         </section>
    
@@ -47,12 +47,12 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="sambonet1.html"> <img src="../immagini/sambonet/sambonet1.jpeg" alt=""> </a>
+                <a href="sambonet1.html"> <img src="../immagini/sambonet/sambonet1.webp" alt=""> </a>
                 <p> <strong>Posate girotondo</strong><br>Roberto Sambonet, 1989 <br>Prodotto</p>
             </div>
 
             <div class="card">
-                <a href="sambonet3.html"> <img src="../immagini/sambonet/sambonet3.jpeg" alt=""> </a>
+                <a href="sambonet3.html"> <img src="../immagini/sambonet/sambonet3.webp" alt=""> </a>
                 <p> <strong>Pesciera ovale</strong><br>Roberto Sambonet, 1957 <br>Prodotto</p>
             </div>
 
