--- a/progetti/sambonet4.html
+++ b/progetti/sambonet4.html
@@ -47,17 +47,17 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="sambonet1.html"> <img src="../immagini/sambonet/sambonet1.jpeg" alt=""> </a>
+                <a href="sambonet1.html"> <img src="../immagini/sambonet/sambonet1.webp" alt=""> </a>
                 <p> <strong>Posate girotondo</strong><br>Roberto Sambonet, 1989 <br>Prodotto</p>
             </div>
 
             <div class="card">
-                <a href="sambonet2.html"> <img src="../immagini/sambonet/sambonet2.jpeg" alt=""> </a>
+                <a href="sambonet2.html"> <img src="../immagini/sambonet/sambonet2.webp" alt=""> </a>
                 <p> <strong>Lampada tizio</strong><br>Roberto Sambonet, 1972 <br>Prodotto</p>
             </div>
 
             <div class="card">
-                <a href="sambonet3.html"> <img src="../immagini/sambonet/sambonet3.jpeg" alt=""> </a>
+                <a href="sambonet3.html"> <img src="../immagini/sambonet/sambonet3.webp" alt=""> </a>
                 <p> <strong>Pesciera ovale</strong><br>Roberto Sambonet, 1957 <br>Prodotto</p>
             </div>
 
