--- a/projects.html
+++ b/projects.html
@@ -428,32 +428,32 @@
     </div>
 
     <div class="foto foto3">
-        <a href="../progetti/sambonet2.html"> <img src="immagini/sambonet/sambonet2.webp" alt=""> </a>
+        <a href="progetti/sambonet2.html"> <img src="immagini/sambonet/sambonet2.webp" alt=""> </a>
         <p> <strong>Lampada Tizio</strong><br>Roberto Sambonet, 1972 <br>Prodotto </p>
     </div>
 
     <div class="foto foto3">
-        <a href="../progetti/sambonet3.html"> <img src="immagini/sambonet/sambonet3.webp" alt=""> </a>
+        <a href="progetti/sambonet3.html"> <img src="immagini/sambonet/sambonet3.webp" alt=""> </a>
         <p> <strong>Pesciera ovale</strong><br>Roberto Sambonet, 1957 <br>Prodotto </p>
     </div>
 
     <div class="foto foto3">
-        <a href="../progetti/sambonet4.html"> <img src="immagini/sambonet/sambonet4.webp" alt=""> </a>
+        <a href="progetti/sambonet4.html"> <img src="immagini/sambonet/sambonet4.webp" alt=""> </a>
         <p> <strong>Pentole</strong><br>Roberto Sambonet, 1965 <br>Prodotto</p>
     </div>
 
     <div class="foto foto3">
-        <a href="../progetti/mari3.html"> <img src="immagini/mari/mari3.webp" alt=""> </a>
+        <a href="progetti/mari3.html"> <img src="immagini/mari/mari3.webp" alt=""> </a>
         <p> <strong>Sedia 1:1</strong><br>Enzo Mari, 2004 <br>Prodotto </p>
     </div>
 
     <div class="foto foto3">
-        <a href="../progetti/mari4.html"> <img src="immagini/mari/mari4.webp" alt=""> </a>
+        <a href="progetti/mari4.html"> <img src="immagini/mari/mari4.webp" alt=""> </a>
         <p> <strong>16 animali</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
     </div>
 
     <div class="foto foto3">
-        <a href="../progetti/mari5.html"> <img src="immagini/mari/mari5.webp" alt=""> </a>
+        <a href="progetti/mari5.html"> <img src="immagini/mari/mari5.webp" alt=""> </a>
         <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
     </div>
 
