--- a/projects.html
+++ b/projects.html
@@ -458,7 +458,7 @@
     </div>
 
     <div class="foto foto3">
-        <a href="../progetti/nizzoli3.html"> <img src="immagini/nizzoli/nizzoli3.webp" alt=""> </a>
+        <a href="progetti/nizzoli3.html"> <img src="immagini/nizzoli/nizzoli3.webp" alt=""> </a>
         <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p>
     </div>
 
