--- a/projects.html
+++ b/projects.html
@@ -424,7 +424,7 @@
     
 
 <div class="foto foto3">
-    <a href="../progetti/sambonet1.html"> <img src="immagini/sambonet/sambonet1.webp" alt=""> </a>
+    <a href="progetti/sambonet1.html"> <img src="immagini/sambonet/sambonet1.webp" alt=""> </a>
     <p> <strong>Posate Girotondo</strong><br>Roberto Sambonet, 1989 <br>Prodotto</p>
 </div>
 
