--- a/projects.html
+++ b/projects.html
@@ -422,8 +422,10 @@
 
        <!--Prodotti-->
     
-
-
+   <div class="foto foto3">
+        <a href="progetti/sambonet1.html"> <img src="immagini/sambonet/sambonet1.webp" alt=""> </a>
+        <p> <strong>Posate Girotondo</strong><br>Roberto Sambonet, 1989 <br>Prodotto</p>
+</div>
 
 <div class="foto foto3">
     <a href="progetti/sambonet2.html"> <img src="immagini/sambonet/sambonet2.webp" alt=""> </a>
