--- a/designers/nizzoli.html
+++ b/designers/nizzoli.html
@@ -56,17 +56,27 @@
             
             <div class="card">
                 <a href="../progetti/nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> </a>
-                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster </p>
+                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Manifesto</p>
             </div>
 
             <div class="card">
                 <a href="../progetti/nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a>
-                <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p>
+                <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Manifesto</p>
             </div>
 
             <div class="card">
                 <a href="../progetti/nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.webp" alt=""> </a>
                 <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p>
+            </div>
+
+            <div class="card">
+                <a href="../progetti/nizzoli4.html"> <img src="../immagini/nizzoli/nizzoli4.webp" alt=""> </a>
+                <p> <strong>Divisumma 14</strong><br>Marcello Nizzoli, 1972 <br>Prodotto</p>
+            </div>
+
+            <div class="card">
+                <a href="../progetti/nizzoli5.html"> <img src="../immagini/nizzoli/nizzoli5.webp" alt=""> </a>
+                <p> <strong>Olivetti Lexicon</strong><br>Marcello Nizzoli, 1949 <br>Manifesto</p>
             </div>
             
         </div>
