--- a/progetti/nizzoli2.html
+++ b/progetti/nizzoli2.html
@@ -56,6 +56,16 @@
                 <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p> <!-- MODIFICARE -->
             </div>
 
+            <div class="card">
+                <a href="../progetti/nizzoli4.html"> <img src="../immagini/nizzoli/nizzoli4.webp" alt=""> </a>
+                <p> <strong>Divisumma 14</strong><br>Marcello Nizzoli, 1972 <br>Prodotto</p>
+            </div>
+
+            <div class="card">
+                <a href="../progetti/nizzoli5.html"> <img src="../immagini/nizzoli/nizzoli5.webp" alt=""> </a>
+                <p> <strong>Olivetti Lexicon</strong><br>Marcello Nizzoli, 1949 <br>Manifesto</p>
+            </div>
+
 
         </div>
     </section>
