--- a/progetti/nizzoli3.html
+++ b/progetti/nizzoli3.html
@@ -41,7 +41,7 @@
     
         <section class="progetto">
             <img src="../immagini/nizzoli/nizzoli3.webp" alt=""> <!-- MODIFICARE -->
-            <p>Marcello Nizzoli, 1930<br>Manifesto</p> <!-- MODIFICARE -->
+            <p>Marcello Nizzoli, 1930<br>Prodotto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -56,6 +56,16 @@
             <div class="card">
                 <a href="nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a> <!-- MODIFICARE -->
                 <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Manifesto</p> <!-- MODIFICARE -->
+            </div>
+
+            <div class="card">
+                <a href="../progetti/nizzoli4.html"> <img src="../immagini/nizzoli/nizzoli4.webp" alt=""> </a>
+                <p> <strong>Divisumma 14</strong><br>Marcello Nizzoli, 1972 <br>Prodotto</p>
+            </div>
+
+            <div class="card">
+                <a href="../progetti/nizzoli5.html"> <img src="../immagini/nizzoli/nizzoli5.webp" alt=""> </a>
+                <p> <strong>Olivetti Lexicon</strong><br>Marcello Nizzoli, 1949 <br>Manifesto</p>
             </div>
 
 
