--- a/progetti/nizzoli4.html
+++ b/progetti/nizzoli4.html
@@ -32,14 +32,14 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Campari</h2> <!-- MODIFICARE -->
-    <p>I poster di Nizzoli per Campari sono caratterizzati da uno stile distintivo e vivace. Utilizzava colori audaci e vibranti, spesso con un forte uso del rosso, il colore iconico associato al marchio Campari. I suoi design erano accattivanti e giocosi, con una combinazione di elementi grafici e testi che catturavano l'attenzione del pubblico.</p> <!-- MODIFICARE -->
+    <h2>Divisumma 14</h2> <!-- MODIFICARE -->
+    <p>Marcello Nizzoli, noto designer italiano, ha contribuito alla progettazione della Divisumma 14 per l'azienda Olivetti. Questa calcolatrice elettronica è stata introdotta nel 1972 ed è stata una delle prime calcolatrici Olivetti a utilizzare un display a LED. Il design di Nizzoli per la Divisumma 14 si caratterizzava per linee pulite e una forma elegante, che la rendevano una calcolatrice apprezzata per la sua estetica e funzionalità.</p> <!-- MODIFICARE -->
     </section>
     
     
         <section class="progetto">
-            <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> <!-- MODIFICARE -->
-            <p>Marcello Nizzoli, 1927<br>Manifesto</p> <!-- MODIFICARE -->
+            <img src="../immagini/nizzoli/nizzoli4.webp" alt=""> <!-- MODIFICARE -->
+            <p>Marcello Nizzoli, 1972<br>Prodotto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -48,17 +48,17 @@
         <div class="grid">
 
             <div class="card">
-                <a href="nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p> <!-- MODIFICARE -->
+                <a href="nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster</p> <!-- MODIFICARE -->
             </div>
             <div class="card">
-                <a href="nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p> <!-- MODIFICARE -->
+                <a href="nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Manifesto</p> <!-- MODIFICARE -->
             </div>
 
             <div class="card">
-                <a href="../progetti/nizzoli4.html"> <img src="../immagini/nizzoli/nizzoli4.webp" alt=""> </a>
-                <p> <strong>Divisumma 14</strong><br>Marcello Nizzoli, 1972 <br>Prodotto</p>
+                <a href="nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.webp" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p> <!-- MODIFICARE -->
             </div>
 
             <div class="card">
