--- a/progetti/nizzoli5.html
+++ b/progetti/nizzoli5.html
@@ -32,14 +32,15 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Campari</h2> <!-- MODIFICARE -->
-    <p>I poster di Nizzoli per Campari sono caratterizzati da uno stile distintivo e vivace. Utilizzava colori audaci e vibranti, spesso con un forte uso del rosso, il colore iconico associato al marchio Campari. I suoi design erano accattivanti e giocosi, con una combinazione di elementi grafici e testi che catturavano l'attenzione del pubblico.</p> <!-- MODIFICARE -->
+    <h2>Olivetti Lexikon</h2> <!-- MODIFICARE -->
+    <p>In questo manifesto del 1949 per la macchina per scrivere Lexikon 80 Marcello Nizzoli, autore sia del manifesto che del design della macchina, si ispira ad un disegno di un uccello di Paul Klee. Nizzoli lo trasforma graficamente in un uccello dal corpo stroboscopico che uscendo dalla parte terminale del carrello di scrittura della macchina, avvisa con il suo cinguettio dell’avvenuto scorrimento.
+        La citazione alla pittura di Klee è un omaggio di Nizzoli alla cultura della Bauhaus punto di riferimento della sua formazione ed esperienza culturale.</p> <!-- MODIFICARE -->
     </section>
     
     
         <section class="progetto">
-            <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> <!-- MODIFICARE -->
-            <p>Marcello Nizzoli, 1927<br>Manifesto</p> <!-- MODIFICARE -->
+            <img src="../immagini/nizzoli/nizzoli5.webp" alt=""> <!-- MODIFICARE -->
+            <p>Marcello Nizzoli, 1949<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -48,9 +49,14 @@
         <div class="grid">
 
             <div class="card">
-                <a href="nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p> <!-- MODIFICARE -->
+                <a href="nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster</p> <!-- MODIFICARE -->
             </div>
+            <div class="card">
+                <a href="nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Manifesto</p> <!-- MODIFICARE -->
+            </div>
+
             <div class="card">
                 <a href="nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.webp" alt=""> </a> <!-- MODIFICARE -->
                 <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p> <!-- MODIFICARE -->
@@ -59,11 +65,6 @@
             <div class="card">
                 <a href="../progetti/nizzoli4.html"> <img src="../immagini/nizzoli/nizzoli4.webp" alt=""> </a>
                 <p> <strong>Divisumma 14</strong><br>Marcello Nizzoli, 1972 <br>Prodotto</p>
-            </div>
-
-            <div class="card">
-                <a href="../progetti/nizzoli5.html"> <img src="../immagini/nizzoli/nizzoli5.webp" alt=""> </a>
-                <p> <strong>Olivetti Lexicon</strong><br>Marcello Nizzoli, 1949 <br>Manifesto</p>
             </div>
 
 
