--- a/projects.html
+++ b/projects.html
@@ -420,6 +420,11 @@
           <p> <strong>Olivetti MP\</strong><br>Xanti Schawisnky, 1932 <br>Poster </p>
       </div>
 
+      <div class="card">
+        <a href="../progetti/nizzoli5.html"> <img src="../immagini/nizzoli/nizzoli5.webp" alt=""> </a>
+        <p> <strong>Olivetti Lexicon</strong><br>Marcello Nizzoli, 1949 <br>Manifesto</p>
+    </div>
+
        <!--Prodotti-->
     
    <div class="foto foto3">
@@ -460,6 +465,11 @@
 <div class="foto foto3">
     <a href="progetti/nizzoli3.html"> <img src="immagini/nizzoli/nizzoli3.webp" alt=""> </a>
     <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p>
+</div>
+
+<div class="foto foto3">
+    <a href="../progetti/nizzoli4.html"> <img src="../immagini/nizzoli/nizzoli4.webp" alt=""> </a>
+    <p> <strong>Divisumma 14</strong><br>Marcello Nizzoli, 1972 <br>Prodotto</p>
 </div>
 
       <!--Marchi-->
