--- a/projects.html
+++ b/projects.html
@@ -420,7 +420,7 @@
           <p> <strong>Olivetti MP\</strong><br>Xanti Schawisnky, 1932 <br>Poster </p>
       </div>
 
-      <div class="card">
+      <div class="foto foto2">
         <a href="../progetti/nizzoli5.html"> <img src="../immagini/nizzoli/nizzoli5.webp" alt=""> </a>
         <p> <strong>Olivetti Lexicon</strong><br>Marcello Nizzoli, 1949 <br>Manifesto</p>
     </div>
@@ -468,7 +468,7 @@
 </div>
 
 <div class="foto foto3">
-    <a href="../progetti/nizzoli4.html"> <img src="../immagini/nizzoli/nizzoli4.webp" alt=""> </a>
+    <a href="progetti/nizzoli4.html"> <img src="immagini/nizzoli/nizzoli4.webp" alt=""> </a>
     <p> <strong>Divisumma 14</strong><br>Marcello Nizzoli, 1972 <br>Prodotto</p>
 </div>
 
