--- a/designers/monguzzi.html
+++ b/designers/monguzzi.html
@@ -36,10 +36,10 @@
             <div class="flex">
                 <div class="testo">
                     <h2>Bruno Monguzzi</h2>
-                    <p>Bruno Monguzzi nasce a Mendrisio nel 1941 e si trasferisce presto con la famiglia a Ginevra dove frequenta il corso di grafica all' Ecole des Arts Décoratifs.All'inizio degli anni sessanta frequenta i corsi di Gestalt, tipo-grafica e fotografia alla Martin's School of Art (oggi Central Saint Martins) e al London College of Printing (oggi London College of Communication).
-                        Collabora inizialmente con lo studio di Dennis Bailey a Londra e poi nel 1961 con lo Studio Boggeri di Milano – in quegli anni lo studio leader in Italia nel design e nella pubblicità.
-                        Nel 1968 tornato a Milano, si è ricollegato ad Antonio Boggeri e ha collaborato in modo indipendente fino alla chiusura dello studio nel1981. Nei primi anni '70, con Anna, la figlia di Boggeri, che ha avuto un ruolo chiave in tutta la carriera di Monguzzi.
-                        Si stabilì nella città appartata di Meride e iniziò la sua lunga carriera di insegnante, prima a Lugano dove dal 1970 in poi, ha insegnato la percezione visiva e il design tipografico a Lugano, e ha tenuto conferenze in varie università europee ed americane.
+                    <p>Bruno Monguzzi nasce a Mendrisio nel 1941 e si trasferisce presto con la famiglia a Ginevra dove frequenta il corso di grafica all' Ecole des Arts Décoratifs.All'inizio degli anni sessanta frequenta i corsi di Gestalt, tipo-grafica e fotografia alla Martin's School of Art (oggi Central Saint Martins) e al London College of Printing (oggi London College of Communication).</p>
+                        <p>Collabora inizialmente con lo studio di Dennis Bailey a Londra e poi nel 1961 con lo Studio Boggeri di Milano in quegli anni lo studio leader in Italia nel design e nella pubblicità.
+                        Nel 1968 tornato a Milano, si è ricollegato ad Antonio Boggeri e ha collaborato in modo indipendente fino alla chiusura dello studio nel1981. Nei primi anni '70, con Anna, la figlia di Boggeri, che ha avuto un ruolo chiave in tutta la carriera di Monguzzi.</p>
+                        <p>Si stabilì nella città appartata di Meride e iniziò la sua lunga carriera di insegnante, prima a Lugano dove dal 1970 in poi, ha insegnato la percezione visiva e il design tipografico a Lugano, e ha tenuto conferenze in varie università europee ed americane.
                         Nel 1981 Bruno è stato il curatore e designer della retrospettiva dello Studio Boggeri alla Triennale di Milano. Nel 1983, in collaborazione con Visuel Design, Jean Widmer, ha vinto il concorso per il sistema di segnaletica e l'identità per il Musée d'Orsay, Parigi.</p>     
                 </div>
 
