--- a/designers/grignani.html
+++ b/designers/grignani.html
@@ -36,7 +36,8 @@
             <div class="flex">
                 <div class="testo">
                     <h2>Franco Grignani</h2>
-                    <p>  Nato a Pieve Porto Morone, Lombardia, 1908. Artista, designer e fotografo. Studiò architettura e divenne un esponente di spicco della seconda ondata del Futurismo. Negli anni '30 fonda lo Studio Grignani e inizia a collaborare come disegnatore pubblicitario con Domus, Dompé, Mondadori, Montecatini e Alfieri & Lacroix per i quali disegna numerose campagne. Grignani è stato il maestro indiscusso della ricerca ottica nel graphic design e la sua azienda è stata l'unica vera concorrente dello Studio Boggeri fino ai primi anni '60. Art director di Pubblicità in Italia annuali da ventisei anni. Il suo progetto più famoso è il Woolmark. Ha scritto vari saggi e insegnato sia in Italia che negli Stati Uniti Morì a Milano, Lombardia, 1999.</p>     
+                    <p>  Nato a Pieve Porto Morone, Lombardia, 1908. Artista, designer e fotografo. Studiò architettura e divenne un esponente di spicco della seconda ondata del Futurismo. Negli anni '30 fonda lo Studio Grignani e inizia a collaborare come disegnatore pubblicitario con Domus, Dompé, Mondadori, Montecatini e Alfieri & Lacroix per i quali disegna numerose campagne.</p>
+                    <p>Grignani è stato il maestro indiscusso della ricerca ottica nel graphic design e la sua azienda è stata l'unica vera concorrente dello Studio Boggeri fino ai primi anni '60. Art director di Pubblicità in Italia annuali da ventisei anni. Il suo progetto più famoso è il Woolmark. Ha scritto vari saggi e insegnato sia in Italia che negli Stati Uniti Morì a Milano, Lombardia, 1999.</p>     
                 </div>
 
                 <div>
