--- a/designers/iliprandi.html
+++ b/designers/iliprandi.html
@@ -37,8 +37,9 @@
                 <div class="testo">
                     <h2>Giancarlo Iliprandi</h2>
                     <p>Giancarlo Iliprandi nasce a Milano il 15 marzo del 1925 ed è morto il 15 settembre 2016 a Milano all'età di 91 anni, è considerato uno dei maggiori grafici italiani
-                        Suo padre commerciava in automobili.All'inizio si era iscritto alla Facoltà di Medicina e Chirurgia dell'Università degli Studi di Milano, ma in seguito si è trasferito all'Accademia di Brera per studiare pittura, diplomandosi nel 1949.Poi ha studiato scenografia nel 1953 presso l'Accademia di belle arti di Brera. Inizia però da autodidatta l'attività di igraphic designer, ispirandosi ad Antonio Boggeri, Max Huber, Albe Steiner e Bruno Munari.Riesce ad ottenere a partire dai primi anni cinquanta importanti commissioni da aziende come Rai, La Rinascente, Roche, Honeywell, Standa, Fiat ed Electa.
-                        A partire dagli anni sessanta lavora in qualità di art director per riviste quali ad esempio Popular Photography Italia, Fototeca, Sci nautico e Interni. Disegna le copertine per I dischi del sole.
+                        Suo padre commerciava in automobili.All'inizio si era iscritto alla Facoltà di Medicina e Chirurgia dell'Università degli Studi di Milano, ma in seguito si è trasferito all'Accademia di Brera per studiare pittura, diplomandosi nel 1949.</p>
+                        <p>Poi ha studiato scenografia nel 1953 presso l'Accademia di belle arti di Brera. Inizia però da autodidatta l'attività di igraphic designer, ispirandosi ad Antonio Boggeri, Max Huber, Albe Steiner e Bruno Munari.Riesce ad ottenere a partire dai primi anni cinquanta importanti commissioni da aziende come Rai, La Rinascente, Roche, Honeywell, Standa, Fiat ed Electa.</p>
+                        <p>A partire dagli anni sessanta lavora in qualità di art director per riviste quali ad esempio Popular Photography Italia, Fototeca, Sci nautico e Interni. Disegna le copertine per I dischi del sole.
                         Progetta inoltre l'immagine coordinata per le Cucine RB, per Ankerfarm e per Stilnovo. Collabora con lo “studio Boggeri” assieme a gli altri grafici che hanno contribuito allo sviluppo della grafica in italia ed Internazionale.
                         </p>     
                 </div>
