--- a/designers/nizzoli.html
+++ b/designers/nizzoli.html
@@ -36,10 +36,10 @@
             <div class="flex">
                 <div class="testo">
                     <h2>Marcello Nizzoli</h2>
-                    <p>Marcello Nizzoli è stato un designer industriale, architetto e pittore, tra i più importanti del Novecento italiano, il padre delle più famose macchine da scrivere Olivetti, simbolo della modernità italiana e della rinascita industriale non-bellica, con oggetti esposti anche al MOMA di New York.
-                        Dopo essersi diplomato all'Istituto d'Arte di Parma ha iniziato a farsi conoscere come pittore, unendosi al gruppo Nuove Tendenze e realizzando manifesti pubblicitari per la Campari.
-                        Negli anni '30 ha insegnato all'ISIA di Monza. Ha preso parte all'allestimento di varie mostre tra cui la Mostra della Rivoluzione Fascista (1932), la Mostra dell'Aeronautica (1934), il Salone della Vittoria alla VI Triennale di Milano del 1936.
-                        La sua fama è maggiormente legata all'Olivetti dove alla fine degli anni '30 iniziò a collaborare come pubblicitario e in seguito designer, realizzando tra l'altro la famosa Lettera 22.
+                    <p>Marcello Nizzoli è stato un designer industriale, architetto e pittore, tra i più importanti del Novecento italiano, il padre delle più famose macchine da scrivere Olivetti, simbolo della modernità italiana e della rinascita industriale non-bellica, con oggetti esposti anche al MOMA di New York.</p>
+                        <p>Dopo essersi diplomato all'Istituto d'Arte di Parma ha iniziato a farsi conoscere come pittore, unendosi al gruppo Nuove Tendenze e realizzando manifesti pubblicitari per la Campari.
+                        Negli anni '30 ha insegnato all'ISIA di Monza. Ha preso parte all'allestimento di varie mostre tra cui la Mostra della Rivoluzione Fascista (1932), la Mostra dell'Aeronautica (1934), il Salone della Vittoria alla VI Triennale di Milano del 1936.</p>
+                        <p>La sua fama è maggiormente legata all'Olivetti dove alla fine degli anni '30 iniziò a collaborare come pubblicitario e in seguito designer, realizzando tra l'altro la famosa Lettera 22.
                         Parallelamente lavorò come architetto realizzando numerosi edifici come quello per la ditta Olivetti. Nel 1966 ricevette dal Politecnico di Milano la Laurea Ad Honorem in architettura.</p>     
                 </div>
 
