--- a/progetti/munari5.html
+++ b/progetti/munari5.html
@@ -35,7 +35,8 @@
     <h2>Libri Illegibili</h2>
     <p>
         Nel 1949 Bruno Munari progetta per la prima volta una serie di “libri illeggibili”, opere che definitivamente rinunciano alla comunicazione testuale a favore della sola funzione estetica.
-        Non semplicemente supporto per il testo, la carta comunica un messaggio attraverso il formato, il colore, i tagli e la loro alternanza. Si omettono gli elementi che costituiscono il libro tradizionale, come il colophon e il frontespizio, e la lettura diventa lo svolgersi cadenzato di una composizione musicale, con timbri sempre diversi nell’alternarsi delle pagine.
+        Non semplicemente supporto per il testo, la carta comunica un messaggio attraverso il formato, il colore, i tagli e la loro alternanza.</p>
+        <p> Si omettono gli elementi che costituiscono il libro tradizionale, come il colophon e il frontespizio, e la lettura diventa lo svolgersi cadenzato di una composizione musicale, con timbri sempre diversi nell’alternarsi delle pagine.
         Nel segno della rarefazione visiva e della sperimentazione dei materiali, la produzione di “libri illeggibili” continua per Munari lungo tutto l’arco della propria vita.</p>
     </section>
     
