--- a/designers/calabresi.html
+++ b/designers/calabresi.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Aldo Calabresi</h2>
                     <p>Nato ad Adliswil, Svizzera, 1930. Ha studiato alla Scuola di arti e mestieri di Zurigo e ha iniziato a lavorare come tipografo. Dopo tre anni si trasferisce a Parigi. Nel 1954 entra a far parte dello Studio Boggeri di Milano diventando un importante protagonista della grafica italiana.</p>
