--- a/designers/carboni.html
+++ b/designers/carboni.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Erberto Carboni</h2>
                     <p>Nato come illustratore, e attivo fin dagli anni ’30, Erberto-Carboni si spinge, all’inizio degli anni ’50, verso la sponda che lo condurrà a diventare il primo (insieme forse ad Armando Testa), a comprendere il trasformarsi della professione di grafico e a spingersi verso l’art direction pubblicitaria. 
