--- a/designers/grignani.html
+++ b/designers/grignani.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Franco Grignani</h2>
                     <p>  Nato a Pieve Porto Morone, Lombardia, 1908. Artista, designer e fotografo. Studiò architettura e divenne un esponente di spicco della seconda ondata del Futurismo. Negli anni '30 fonda lo Studio Grignani e inizia a collaborare come disegnatore pubblicitario con Domus, Dompé, Mondadori, Montecatini e Alfieri & Lacroix per i quali disegna numerose campagne.</p>
