--- a/designers/huber.html
+++ b/designers/huber.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Max Huber</h2>
                     <p>Max Huber è stato un noto designer svizzero, nato il 28 aprile 1919 a Baar, nel cantone di Zugo, e deceduto il 1º aprile 1992 a Manno, in Svizzera. È considerato una delle figure più influenti nel campo del design grafico e industriale del XX secolo. Huber ha studiato presso la Scuola di Arte Applicata di Zurigo e successivamente presso la Kunstgewerbeschule di Basilea, dove ha sviluppato un forte interesse per il design tipografico e la fotografia.</p>
