--- a/designers/iliprandi.html
+++ b/designers/iliprandi.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Giancarlo Iliprandi</h2>
                     <p>Giancarlo Iliprandi nasce a Milano il 15 marzo del 1925 ed è morto il 15 settembre 2016 a Milano all'età di 91 anni, è considerato uno dei maggiori grafici italiani
