--- a/designers/lamm.html
+++ b/designers/lamm.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Lora Lamm</h2>
                     <p>Nasce ad Arosa, in Svizzera, nel 1928. Dopo aver studiato alla Scuola di Arti e Mestieri di Zurigo, si trasferisce a Milano ed entra nello Studio Boggeri nel 1953. L'anno successivo entra nello studio grafico de La Rinascente illustrando numerosi manifesti, cataloghi e annunci che le segnato la comunicazione della società. Nel 1958 subentrò a Max Huber alla direzione dello studio grafico ricoprendo questo incarico fino al 1962. Contemporaneamente servì anche altre prestigiose aziende tra cui Elizabeth Arden, Olivetti e Pirelli. Nel 1963 torna a Zurigo per entrare a far parte dell'agenzia di Frank C. Thiessing.</p>     
