--- a/designers/mari.html
+++ b/designers/mari.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Enzo Mari</h2>
                     <p> Enzo Mari nasce nel 1932 a Novara e inizia la sua carriera come designer nel 1957, dopo aver studiato all’Accademia di Brera fino al 1956. Da giovane prende parte al movimento dell’Arte Cinetica, una corrente che avvicina l’opera d’arte al progetto industriale, e lì conosce Bruno Munari, che influenza molte delle sue opere. Negli anni Sessanta Enzo Mari incontra Lea Vergine, saggista e critica d’arte con cui instaura prima un rapporto professionale, seguito da un rapporto d’amore durato tutta la vita.</p>
