--- a/designers/milani.html
+++ b/designers/milani.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Armando Milani</h2>
                     <p>Nasce a Milano nel 1940. Dal 1959 al 1963 ha studiato nella Scuola dell'Umanitaria di Milano con Albe Steiner. Nel 1965 apre il proprio studio a Milano e inizia a collaborare con Giulio Confalonieri e lo Studio Boggeri. Nel 1976 lo raggiunge il fratello Maurizio. L'anno dopo si è trasferito a New York City per lavorare presso Vignelli Associates su importanti programmi di identità aziendale.</p>
