--- a/designers/monguzzi.html
+++ b/designers/monguzzi.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Bruno Monguzzi</h2>
                     <p>Bruno Monguzzi nasce a Mendrisio nel 1941 e si trasferisce presto con la famiglia a Ginevra dove frequenta il corso di grafica all' Ecole des Arts Décoratifs.All'inizio degli anni sessanta frequenta i corsi di Gestalt, tipo-grafica e fotografia alla Martin's School of Art (oggi Central Saint Martins) e al London College of Printing (oggi London College of Communication).</p>
