--- a/designers/muratore.html
+++ b/designers/muratore.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Remo Muratore</h2>
                     <p>Nato nel 1912 a Chieri, in Piemonte. Si è laureato in architettura al Politecnico di Torino ed è stato apprendista in tipografia presso l'Istituto Grafico Bertieri, dove ha lavorato per la rivista Risorgimento Grafico. Dal 1938 al 1940 lavora presso il rinomato Studio Boggeri al servizio di importanti aziende come Max Meyer e Olivetti.</p>
