--- a/designers/nizzoli.html
+++ b/designers/nizzoli.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Marcello Nizzoli</h2>
                     <p>Marcello Nizzoli è stato un designer industriale, architetto e pittore, tra i più importanti del Novecento italiano, il padre delle più famose macchine da scrivere Olivetti, simbolo della modernità italiana e della rinascita industriale non-bellica, con oggetti esposti anche al MOMA di New York.</p>
