--- a/designers/noorda.html
+++ b/designers/noorda.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Bob Noorda</h2>
                     <p>Bob Noorda nacque ad Amsterdam nel 1927.
