--- a/designers/sambonet.html
+++ b/designers/sambonet.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Roberto Sambonet</h2>
                     <p> Roberto Sambonet (1948-1995) è stato un famoso designer italiano, noto per il suo lavoro nel campo del design industriale e dell'architettura. È considerato una figura importante nel panorama del design italiano degli anni '70 e '80.
