--- a/designers/schawinsky.html
+++ b/designers/schawinsky.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Xanti Schawinsky</h2>
                     <p>Nel 1933 si trasferì a Milano, iniziando una collaborazione con lo Studio Boggeri, in cui nel giro di poco tempo risultò essere una "presenza decisiva" per l'apporto alla realizzazione di celebri campagne pubblicitarie. Si ricordano di questo fruttuoso periodo i manifesti per Cinzano e le pubblicità sui pieghevoli di Motta e soprattutto della Olivetti, con l'applicazione dell'innovativa tecnica del fotomontaggio.</p>
