--- a/designers/steiner.html
+++ b/designers/steiner.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Albe Steiner</h2>
                     <p>Nasce a Milano, Lombardia, 1913. Dopo gli studi di ragioneria inizia a lavorare come grafico nei primi anni '30, collaborando con lo Studio Boggeri e partecipando alla mostra della Triennale. Dal 1939 fu aiutato dalla moglie Lica. Dopo un viaggio negli Stati Uniti, si unì alla Resistenza e disegnò una serie di opuscoli e periodici clandestini.</p>
