--- a/designers/ballmer.html
+++ b/designers/ballmer.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Walter Ballmer</h2>
                     <p>Nato a Liestal, Svizzera, 1923. Si è diplomato alla Scuola di arti e mestieri di Basilea. Nel 1947, trasferitosi a Milano, inizia a collaborare con lo Studio Boggeri. Dal 1956 lavora per Olivetti disegnando numerosi manifesti, campagne pubblicitarie e il logo dell'azienda. Nel 1971 fonda Unidesign e continua a servire importanti clienti. Muore a Milano nel 2011.</p>     
