--- a/designers/munari.html
+++ b/designers/munari.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Bruno Munari</h2>
                     <p>Nato a Milano, Lombardia, 1907. Artista, designer e scrittore autodidatta. Contribuì alle mostre futuriste con quadri astratti e le prime sculture mobili. Nel 1929 inizia a lavorare nella grafica collaborando con lo Studio Boggeri. Nel 1931 fonda con Ricas (Riccardo Castagnedi) lo studio R+M, con il quale collabora fino al 1937. Negli anni '30 scrive anche numerosi saggi per Campo Grafico e si occupa di grafica per giornali.</p>
