--- a/designers/vivarelli.html
+++ b/designers/vivarelli.html
@@ -33,7 +33,7 @@
     
     <main>
         <section class="hero-designer">
-            <div class="flex">
+            <div class="flex-designer">
                 <div class="testo">
                     <h2>Carlo Vivarelli</h2>
                     <p>Nato a Zurigo, Svizzera, 1919. Si è formato a Zurigo come graphic designer, quindi si è trasferito a Parigi per lavorare con Paul Colin. Nel 1946 si trasferisce a Milano diventando direttore artistico del famoso Studio Boggeri. Tornato a Zurigo, apre il proprio studio al servizio di prestigiosi clienti tra cui Electrolux, Glaxo, Philips, Roche e la Televisione Svizzera.</p>
