--- a/designers.html
+++ b/designers.html
@@ -36,7 +36,7 @@
   <!-- Card Designer -->
   <section class="designer">
 
-    <h2>I DESIGNER</h2>
+    <h2>I Designer</h2>
     <div class="grid1">
         <div class="card1">
             <a href="designers/steiner.html"> <img src="immagini/designer/albe-steiner-foto.webp" alt=""></a>
