--- a/projects.html
+++ b/projects.html
@@ -525,7 +525,7 @@
     </div>
 
     <footer>
-      <p><a href="index.html">Designer Studio Boggeri</a></p>
+      <p class="logo"><a href="index.html">Designer Studio Boggeri</a></p>
       <nav>
           <ul>
               <li><a href="studio.html">Studio</a></li>
