--- a/studio.html
+++ b/studio.html
@@ -62,7 +62,7 @@
 </main>
 
     <footer>
-        <p><a href="index.html">Designer Studio Boggeri</a></p>
+        <p class="logo"><a href="index.html">Designer Studio Boggeri</a></p>
         <nav>
             <ul>
                 <li><a href="studio.html">Studio</a></li>
